Bug 1166243 - Remove build() function from js and xpc shells. r=bholley,r=efaust